--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 
 jwt.secret=javainuse
-server.port=9090
+server.port=5000
+spring.datasource.url=jdbc:mysql://cue.cvzfzd2mblzu.us-east-2.rds.amazonaws.com:3306/stdmgt
+spring.datasource.username=admin
+spring.datasource.password=dnOSQPmqNzDcLJPal1QM
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
